# igvc_autonav

./: .gitignore  README.md  attraction.py  frames_2025-06-30_14.14.42.gv  frames_2025-07-03_22.54.56.gv  h>  l.txt  maze.json  maze1.json  move_forward.py  pointcloud_publisher.py  python_astarvis.py  python_dijkstra.py  python_randomsearch.py  python_rrtstar.py  t.txt  test,py  test.py
src/: lane_follow_node.py  lane_mask_node.py
src/bme_gazebo_sensors/: CMakeLists.txt  lane_overlay_node.py  move_forward.py  move_forward_node.py  move_it.py  park.py
src/bme_gazebo_sensors/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/bme_gazebo_sensors/launch/: igvc.launch.py  igvc_world.launch.py  integrated.launch.py  intersection.launch.py  m_integrated.launch.py  spawn_robot.launch.py  world.launch.py
src/bme_gazebo_sensors/log/: latest_build
src/bme_gazebo_sensors/models/asphalt_ground_plane/: model.config
src/bme_gazebo_sensors/models/asphault_ground_plane/: model.config
src/bme_gazebo_sensors/models/barrel_white/: model.config
src/bme_gazebo_sensors/models/construction_cone/: model.sdf
src/bme_gazebo_sensors/models/pothole/: model.config
src/bme_gazebo_sensors/models/ramp/: model.config
src/bme_gazebo_sensors/models/stop_sign/: model.sdf
src/bme_gazebo_sensors/urdf/: mogi_bot.gazebo  mogi_bot.urdf
src/bme_gazebo_sensors/worlds/: asphalt.world  asphalt_v4.world  asphault.world  asphault3.world  asphault_v4.world  asphaultv2.world  old_asphalt.world
src/bme_gazebo_sensors_py/: package.xml  setup.cfg  setup.py
src/bme_gazebo_sensors_py/bme_gazebo_sensors_py/: c.py  chase_the_ball.py  curvefit_redundant.py  gps_waypoint_publisher.py  horizontal.py  intersection_funcs.py  intersection_handler.py  intersection_left.py  intersection_leftturn.py  intersection_straight.py  lane_curvefitting.py  lane_following_curvefit.py  left_inter_completion_detector.py  m_horizontal_line_detect.py  move_forward.py  old_leftturn.py  old_straight.py  parallel_parking.py  parking_pulin.py  parking_pullin.py  parking_pullout.py  pointcloud_transform.py  right_inter_completion_detector.py
src/costmap/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/costmap/costmap/: costmap.py  path_planning.py
src/costmap/src/: costmap_node.cpp
src/ekf/: CMakeLists.txt  package.xml
src/ekf/launch/: dual_ekf.yaml  ekf.yaml
src/igvc/: CMakeLists.txt  package.xml
src/igvc/config/: ekf.yaml
src/igvc/launch/: autonav.launch.py  autonav_raycast.launch.py  autonav_world.launch.py  check_urdf.launch.py  igvc.launch.py  igvc_world.launch.py  integrated.launch.py  intersection.launch.py  m_autonav.launch.py  m_integrated.launch.py  m_spawn_robot.launch.py  main.launch.py  parallel_parking.launch.py  parking_pullin.launch.py  parking_pullout.launch.py  qual_intersection.launch.py  spawn_robot.launch.py  world.launch.py
src/igvc/meshes/: police_barricade.dae
src/igvc/meshes/AFrame/: Text.txt
src/igvc/models/asphalt_ground_plane/: model.sdf
src/igvc/models/autonav_ground_plane/: model.config  model.sdf
src/igvc/models/barrel_blue/: model.sdf
src/igvc/models/barrel_green/: model.sdf
src/igvc/models/barrel_red/: model.sdf
src/igvc/models/barrel_white/: model.sdf
src/igvc/models/barrel_yellow/: model.sdf
src/igvc/models/barricade/: model.config  model.sdf
src/igvc/models/construction_barrel/: model.sdf
src/igvc/models/igvc_sign/: model.sdf
src/igvc/models/person_standing/: model.sdf
src/igvc/models/ramp/: model.sdf
src/igvc/models/rescue_randy/: model.sdf
src/igvc/models/selfdrive_ground_plane/: model.config  model.sdf
src/igvc/models/soup_sign/: model.sdf
src/igvc/models/stop_sign/: model.sdf
src/igvc/models/tire/: model.config  model.sdf
src/igvc/rviz/: gps.rviz  rviz.rviz
src/igvc/urdf/: mogi_bot.gazebo  mogi_bot.urdf
src/igvc/worlds/: asphalt.world  asphalt_with_trees.world  autonav.world  autonav_v2.world  autonav_v3.world  autonav_v4_working.world  concrete.world  concrete_overdose.world
src/igvc/worlds/Old Worlds/: asphalt3.world  asphaltv2.world  (+2 more)
src/lane_detection/: package.xml
src/lane_detection/src/: cluster.cu  dbscan-old.cuh  dbscan.cuh  filter.cpp
src/lane_following/lane_detection/: CMakeLists.txt
src/lane_following/lane_detection/launch/: start.py
src/lane_following/lane_detection/src/: dbscan-again.cuh  filter.cpp
src/misc/: 99-usb-serial.rules  CMakeLists.txt  dwb.csv  graceful.csv  intensity.py  package.xml  viz.py
src/misc/src/: cluster_visualizer.cpp  inv_transform.cpp  transform_finder.cpp
src/movement/: package.xml  setup.cfg  setup.py
src/movement/movement/: autonav_gp.py  back_pointcloud_downscaler.py  follow_barrel_and_stop.py  gps_waypoint_publisher.py  horizontal.py  intersection_funcs.py  intersection_left.py  intersection_straight.py  lane_curvefitting.py  m_horizontal_line_detect.py  move_forward.py  parallel_parking.py  parking_pullin.py  parking_pullout.py  pointcloud_downscaler.py  pothole.py  qualification_stop_sign.py  raycast.py  raycast_autonav.py  stop_sign.py  trapezium.py  tuner_back.py  tuner_front.py
src/navigation/: package.xml  setup.py
src/navigation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/navigation/launch/: costmap_test.py  path_planner.launch.py
src/navigation/log/: latest_build
src/navigation/navigation/: back_downsampling.py  controller.py  costmap.py  downsampling.py  goal_point_visualizer.py  goal_publisher.py  goal_publisher_me.py  goal_publisher_py.py  impressive_stuff.py  lane_curvefitting.py  lane_direction_finder.py  lidar_pc2.py  m_controller.py  opt.py  path_planning.py  path_planning_py.py  sanika_controller.py
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/msg/: ObjectArray.msg  ObjectData.msg
src/object_detection/src/: back_object_data_node.py  lidar_object_detection.py  object_data_node.py
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/src/: goal_publisher.cpp  path_planner.cpp  sanika_goal_publisher.cpp
src/vizhi_interfaces/: CMakeLists.txt  package.xml
(+40 files in other folders)
